@@ -1,6 +1,6 @@
 #!/bin/sh
 # This file is part of the PDF Split And Merge Basic source code
-# Copyright 2017 by Sober Lemur S.a.s. di Vacondio Andrea (info@pdfsam.org).
+# Copyright 2017 by Sober Lemur S.r.l. (info@pdfsam.org).
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
@@ -32,6 +32,7 @@ done
 PRGDIR=`dirname "$PRG"`
 BASEDIR=`cd "$PRGDIR/.." >/dev/null; pwd`
 RUNTIME="$BASEDIR"/runtime
+MODULEPATH="$BASEDIR"/lib
 
 if [ ! -d "$PDFSAM_JAVA_PATH" ]; then
   	# the rutime is supplied
@@ -95,19 +96,17 @@ if [ ! -x "$JAVACMD" ] ; then
   exit 1
 fi
 
-JAR_ARG="$BASEDIR"/${project.build.finalName}.${project.packaging}
-
 # For Cygwin, switch paths to Windows format before running java
 if $cygwin; then
   [ -n "$JAVA_HOME" ] && JAVA_HOME=`cygpath --path --windows "$JAVA_HOME"`
   [ -n "$BASEDIR" ] && BASEDIR=`cygpath --path --windows "$BASEDIR"`
 fi
 
-exec "$JAVACMD" -jar "$JAR_ARG" $JAVA_OPTS -Xmx512M \
+exec "$JAVACMD" --enable-preview --module-path "$MODULEPATH" --module org.pdfsam.basic/org.pdfsam.basic.App $JAVA_OPTS -Xmx512M \
+  -splash:$BASEDIR/splash.png \
   -Dapp.name="pdfsam-basic" \
   -Dapp.pid="$$" \
   -Dapp.home="$BASEDIR" \
   -Dbasedir="$BASEDIR" \
   -Dprism.lcdtext=false \
-  org.pdfsam.basic.App \
   "$@"
